[metadata]
name = glap
version = 0.1.0

[options]
packages = find:
package_dir =
    =src
install_requires =
  click
  toml
  python-gitlab
  requests
  importlib; python_version == "2.6"

[options.packages.find] #optional
where=src
include=glap

[options.entry_points]
console_scripts =
    glap = glap.cli:main