[metadata]
name = glap
version = 0.1.3
description = A GitLab Artifact Puller / Downloader
author = Alexander Lindermayr
author_email = alexander.lindermayr97@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/Mountlex/glap
long_description_content_type= text/markdown
description-file = README.md

[options]
packages = find:
package_dir =
    =src
install_requires =
  click
  toml
  python-gitlab
  requests
  yaspin
  importlib; python_version == "2.6"

[options.packages.find] #optional
where=src
include=glap

[options.entry_points]
console_scripts =
    glap = glap.cli:main

[pycodestyle]
max_line_length = 120

[flake8]
max-line-length = 160